--- a/app/package.json
+++ b/app/package.json
@@ -13,9 +13,12 @@
     "vite": "^6.3.5"
   },
   "dependencies": {
+    "@dimforge/rapier3d": "^0.17.3",
     "@types/noisejs": "^2.1.0",
     "@types/three": "^0.177.0",
     "noisejs": "^2.1.0",
-    "three": "^0.177.0"
+    "stats.js": "^0.17.0",
+    "three": "^0.177.0",
+    "vite-plugin-wasm": "^3.4.1"
   }
 }
